--- a/python_for_ml_class2.ipynb
+++ b/python_for_ml_class2.ipynb
@@ -562,11 +562,9 @@
       "source": [
         "num_list = []\n",
         "n=int(input(\"Enter the number of elements in the list:\"))\n",
-        "\n",
         "for i in range(n):\n",
         "  num = int(input(\"Enter number:\"))\n",
         "  num_list.append(num)\n",
-        "\n",
         "sum_of_elements = sum(num_list)\n",
         "print(\"Sum of all elements:\",sum_of_elements)"
       ],
@@ -593,12 +591,51 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#largest so far\n",
+        "largest_so_far = -1\n",
+        "print(\"Before\",largest_so_far)\n",
+        "print(\"Current\\tLargest so far\")\n",
+        "for the_num in [9,41,12,3,74,15]:\n",
+        "  if the_num > largest_so_far:\n",
+        "    largest_so_far = the_num\n",
+        "  print(largest_so_far,\"\\t\",the_num)\n",
+        "print(\"After\",largest_so_far)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rlLU6R7D-Qf3",
+        "outputId": "ae71924f-ee57-44d6-99dd-05ed897a5d96"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before -1\n",
+            "Current\tLargest so far\n",
+            "9 \t 9\n",
+            "41 \t 41\n",
+            "41 \t 12\n",
+            "41 \t 3\n",
+            "74 \t 74\n",
+            "74 \t 15\n",
+            "After 74\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/9O4nI1C4RwLeHn5aRwwJ",
+      "authorship_tag": "ABX9TyN0UAIFR5rZ7p3od7rQ/jqw",
       "include_colab_link": true
     },
     "kernelspec": {
